test/library/standard/Map/types/testNonNilableUnmanagedIndexingError.good
MapTest.chpl:6: In function 'testMap':
MapTest.chpl:39: error: illegal lvalue in assignment
MapTest.chpl:43: error: cannot initialize variable 'zz' of type 'unmanaged T' from a 'borrowed T'
  testNonNilableUnmanagedIndexingError.chpl:11: called as testMap(type t = unmanaged T, param testIndexing = true)
